--- a/platformio.ini
+++ b/platformio.ini
@@ -1,13 +1,15 @@
-[env:esp32]
+[env:esp32dev]
 platform = espressif32
-framework = arduino
 board = esp32dev
+framework = arduino
 monitor_speed = 115200
-upload_speed = 921600
-board_build.partitions = huge_app.csv
-build_flags =
-    -DCORE_DEBUG_LEVEL=0
-    -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
+
+; Use a lower CPU frequency to save battery
+board_build.f_cpu = 80000000L
+
 lib_deps =
-    t-vk/ESP32 BLE Mouse@^0.3.1
+    adafruit/Adafruit SSD1306 @ ^2.5.7
+    adafruit/Adafruit GFX Library @ ^1.11.5
+    h2zero/NimBLE-Arduino @ ^1.4.1
+    t-vk/ESP32-BLE-Mouse @ ^0.3.1
+    t-vk/ESP32-BLE-Keyboard @ ^0.3.2
