Update library dependencies in platformio.ini
Replaced multiple BLE libraries with the Combo Library.

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,13 +3,10 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-
-; Use a lower CPU frequency to save battery
 board_build.f_cpu = 80000000L
 
 lib_deps =
     adafruit/Adafruit SSD1306 @ ^2.5.7
     adafruit/Adafruit GFX Library @ ^1.11.5
-    h2zero/NimBLE-Arduino @ ^1.4.1
-    t-vk/ESP32-BLE-Mouse @ ^0.3.1
-    t-vk/ESP32-BLE-Keyboard @ ^0.3.2
+    ; The Combo Library (Mouse + Keyboard in one)
+    https://github.com/blackketter/ESP32-BLE-Combo.git
